export UNIDAVINCI and ISABELLE_HOME only necessary. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7266 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/hets.in
+++ b/hets.in
@@ -7,12 +7,20 @@
 ### installation;
 ### it is post processed by some IzPack variables starting with %
 
+TESTDVC=`echo $UNIDAVINCI`
+TESTUDG=`echo $UDG_HOME`
+TESTISA=`echo $ISABELL_HOME`
+
+if [ -z $TESTUDG -a -z $TESTDVC ] ; then
+    UNIDAVINCI=$INSTALL_PATH/lib/uDrawGraph-3.1/bin/uDrawGraph
+fi
+if [ -z $TESTISA ] ; then
+    ISABELLE_HOME=$$INSTALL_PATH/lib/Isabelle/Isabelle
+fi
+
 HETS_LIB=$INSTALL_PATH/CASL-lib
 HETS_OWL_PARSER=$INSTALL_PATH/src/HetCATS/OWL_DL
 UNIWISH=/usr/bin/wish
-UNIDAVINCI=$INSTALL_PATH/lib/uDrawGraph-3.1/bin/uDrawGraph
-ISABELLE_HOME=$$INSTALL_PATH/lib/Isabelle/Isabelle
-
 HETS=$INSTALL_PATH/lib/hets/hets-$APP_VER
 
 export HETS_LIB HETS_ISABELLE HETS_OWL_PARSER UNIWISH UNIDAVINCI
