only test if the directories of uDrawGraph and Isaballe are exist git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7268 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/hets.in
+++ b/hets.in
@@ -7,15 +7,11 @@
 ### installation;
 ### it is post processed by some IzPack variables starting with %
 
-TESTDVC=`echo $UNIDAVINCI`
-TESTUDG=`echo $UDG_HOME`
-TESTISA=`echo $ISABELL_HOME`
-
-if [ -z $TESTUDG -a -z $TESTDVC ] ; then
+if [ -d $INSTALL_PATH/lib/uDrawGraph* ] ; then
     UNIDAVINCI=$INSTALL_PATH/lib/uDrawGraph-3.1/bin/uDrawGraph
 fi
-if [ -z $TESTISA ] ; then
-    ISABELLE_HOME=$$INSTALL_PATH/lib/Isabelle/Isabelle
+if [ -d $$INSTALL_PATH/lib/Isabelle* ] ; then
+    ISABELLE_HOME=$INSTALL_PATH/lib/Isabelle/Isabelle
 fi
 
 HETS_LIB=$INSTALL_PATH/CASL-lib
