checkout uni with ghc-6.6 branch. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7298 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/Makefile.installer
+++ b/Makefile.installer
@@ -80,9 +80,9 @@ tools-checkout :
 	@echo update uni
 	@cd $(IZPACK_SAMPLE)/src ; \
 	 if [ -d uni ] ; then \
-	  cvs up -dPA uni ; \
+	  cvs up -dPA -r ghc-6-06 uni ; \
 	 else \
-	  cvs -d :pserver:cvsread@cvs-agbkb.informatik.uni-bremen.de:\/repository co -P uni ; \
+	  cvs -d :pserver:cvsread@cvs-agbkb.informatik.uni-bremen.de:\/repository co -P -r ghc-6-06 uni ; \
 	 fi ;  \
 	 echo checkout programatica ; \
 	 cvs -d  :pserver:anoncvs@cvs.haskell.org:/cvs co \
