--- a/hets.in
+++ b/hets.in
@@ -12,7 +12,7 @@ if [ -d $INSTALL_PATH/lib/uDrawGraph ] ; then
     UDG_PATH=$INSTALL_PATH/lib/uDrawGraph/$UDG_PATH_NAME
     UNIDAVINCI=$UDG_PATH/bin/uDrawGraph
 fi
-if [ -d $$INSTALL_PATH/lib/Isabelle* ] ; then
+if [ -d $INSTALL_PATH/lib/Isabelle* ] ; then
     ISABELLE_HOME=$INSTALL_PATH/lib/Isabelle/Isabelle
     HETS_ISABELLE=$ISABELLE_HOME/bin/isabelle-interface
 fi
