Stripped back CSP-CASL machinery, in preparation for integration of updated version (currently outside Hets tree). git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7318 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/CspCASL/Makefile
+++ b/CspCASL/Makefile
@@ -29,6 +29,12 @@ clean:
 			@rm -vf $(BINS)
 
 
+ccparse:
+			ghc -o ccparse $(GHCOPTS) ccparse.hs
+
+StatAnaCSP.o:
+			ghc $(GHCOPTS) StatAnaCSP.hs
+
 c3po:			$(SOURCES)
 			ghc $(GHCOPTS) -o c3po Main.hs #MixfixParser.hs 
 
