CspCASL - more tidying/removal of old dead cruft in preparation for integration of new version. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7319 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/CspCASL/Makefile
+++ b/CspCASL/Makefile
@@ -9,7 +9,7 @@ GHCINCLUDES	=	..:../ghc:../Common:../CASL
 
 GHCOPTS		=	--make -fglasgow-exts -Wall -i$(GHCINCLUDES)
 
-BINS		=	c3po print
+BINS		=	c3po print ccparse
 
 SOURCES		=	Main.hs AS_CSP_CASL.hs CCKeywords.hs CCLexer.hs \
                         CCToken.hs Parse_hugo.hs
