CspCASL - added some more test cases (from Markus' TCS paper) git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7557 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/CspCASL/Makefile
+++ b/CspCASL/Makefile
@@ -42,4 +42,4 @@ testwrap:		$(SOURCES)
 			gmake -C .. CspCASL/testwrap
 
 test:			testwrap
-			./testwrap test/amg.csp-casl
+			./testwrap test/tcs4.cspcasl
