copy getDailyHets-installer.sh to insteller path git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7569 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/Makefile.installer
+++ b/Makefile.installer
@@ -75,7 +75,8 @@ hetcats-make : tools-checkout daily-hets-download
 
 daily-hets-download :
 	@sh getAllHets.sh $(HETS_VERSION)  ;\
-	rm getAllHets.sh   ;\
+	rm getAllHets.sh  ;\
+	mv getDailyHets.sh $(IZPACK_SAMPLE)  ;\
 	mv $(HOME)/tmp/hets_installer/hets/* $(IZPACK_SAMPLE)/hets/
 
 tools-checkout :
