rename the .uninstall.sh to .uninstall-helper.sh; fixed bug: 4909 before INSTALL_PATH git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7616 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/hets.in
+++ b/hets.in
@@ -11,10 +11,12 @@ if [ -d $INSTALL_PATH/lib/uDrawGraph ] ; then
     UDG_PATH=$INSTALL_PATH/lib/uDrawGraph
     UNIDAVINCI=$UDG_PATH/bin/uDrawGraph
 fi
-if [ -d $$INSTALL_PATH/lib/Isabelle* ] ; then
+
+if [ -d $INSTALL_PATH/lib/Isabelle* ] ; then
     ISABELLE_HOME=$INSTALL_PATH/lib/Isabelle/Isabelle
-    HETS_ISABELLE=$ISABELLE_HOME/bin/isabelle-interface
 fi
+HETS_ISABELLE=$ISABELLE_HOME/bin/isabelle-interface
+
 if [ -d $INSTALL_PATH/CASL-lib ] ; then
     HETS_LIB=$INSTALL_PATH/CASL-lib
 fi
