improved loading of Isabelle from hets startup script and hets from casl-mode. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7680 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/hets.in
+++ b/hets.in
@@ -15,7 +15,10 @@ fi
 if [ -d $INSTALL_PATH/lib/Isabelle* ] ; then
     ISABELLE_HOME=$INSTALL_PATH/lib/Isabelle/Isabelle
 fi
-HETS_ISABELLE=$ISABELLE_HOME/bin/isabelle-interface
+
+if [ -z "$HETS_ISABELLE" ] ; then
+    HETS_ISABELLE=$ISABELLE_HOME/bin/isabelle-interface
+fi
 
 if [ -d $INSTALL_PATH/CASL-lib ] ; then
     HETS_LIB=$INSTALL_PATH/CASL-lib
