--- a/hets.in
+++ b/hets.in
@@ -14,7 +14,7 @@ fi
 
 if [ -d $INSTALL_PATH/lib/Isabelle* ] ; then
     ISABELLE_HOME=$INSTALL_PATH/lib/Isabelle/Isabelle
-else if [ ! -d $ISABELLE_HOME ]
+else if [ ! -d "$ISABELLE_HOME" ]
      then ISABELLE_HOME=`dirname \`which isabelle\` 2> /dev/null`/../../
      fi
 fi
