bugfixed git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7805 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/hets.in
+++ b/hets.in
@@ -37,9 +37,10 @@ HETS=$INSTALL_PATH/lib/hets/hets-$APP_VER
 export HETS_LIB ISABELLE_HOME HETS_ISABELLE HETS_OWL_PARSER \
     UNIWISH UNIDAVINCI UDG_HOME
 
-if [ -d "$INSTALL_PATH/lib/SPASS*" ] ; then
+if [ -d $INSTALL_PATH/lib/SPASS* ] ; then
     SPASS_DIR=`ls $INSTALL_PATH/lib/ | grep SPASS`
+    export PATH=$PATH:$INSTALL_PATH/lib/$SPASS_DIR
 fi
-export PATH=$PATH:$INSTALL_PATH/lib/$SPASS_DIR
+export PATH=$PATH:$INSTALL_PATH/bin
 
 exec $HETS $@
