--- a/hets.in
+++ b/hets.in
@@ -9,8 +9,13 @@
 
 if [ -d $INSTALL_PATH/lib/uDrawGraph ] ; then
     UDG_HOME=$INSTALL_PATH/lib/uDrawGraph
-else if [ ! -d "$UDG_HOME" ] ; then
-    UDG_HOME=$HOME/lib/uDrawGraph
+else 
+    if [ ! -d "$UDG_HOME" ] ; then
+	if [ -f "$UNIDAVINCI" ] ; then
+	    UDG_HOME=`dirname $UNIDAVINCI 2> /dev/null`/..
+	else
+	    UDG_HOME=`dirname \`which uDrawGraph\` 2> /dev/null`/..
+	fi
     fi
 fi
 UNIDAVINCI=$UDG_HOME/bin/uDrawGraph
@@ -18,7 +23,7 @@ UNIDAVINCI=$UDG_HOME/bin/uDrawGraph
 if [ -d $INSTALL_PATH/lib/Isabelle* ] ; then
     ISABELLE_HOME=$INSTALL_PATH/lib/Isabelle/
 else if [ ! -d "$ISABELLE_HOME" ]
-     then ISABELLE_HOME=`dirname \`which isabelle\` 2> /dev/null`/../../
+     then ISABELLE_HOME=`dirname \`which isabelle\` 2> /dev/null`/../..
      fi
 fi
 
