CspCASL - more work on testing git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7823 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/CspCASL/Makefile
+++ b/CspCASL/Makefile
@@ -42,4 +42,5 @@ testwrap:		$(SOURCES)
 			gmake -C .. CspCASL/testwrap
 
 test:			testwrap
-			./testwrap test/borked.cspcasl
+			echo "Executing CSP-CASL tests"
+			@./testwrap
