--- a/CspCASL/Makefile
+++ b/CspCASL/Makefile
@@ -42,5 +42,4 @@ testwrap:		$(SOURCES)
 			gmake -C .. CspCASL/testwrap
 
 test:			testwrap
-			@echo "Executing CSP-CASL tests"
-			@./testwrap
+			./testwrap test test/tcs1.testcase test/tcs1.cspcasl test/tcs3.cspcasl
